--- a/SmartH2O_DU/SmartH2O_SeeAPP/SmartH2O_SeeAPP.csproj
+++ b/SmartH2O_DU/SmartH2O_SeeAPP/SmartH2O_SeeAPP.csproj
@@ -89,6 +89,9 @@
     <None Include="Service References\SmartH2O_Service\Service11.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Service References\SmartH2O_Service\Service12.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
