--- a/SmartH2O_DU/Alarm/Properties/Settings.settings
+++ b/SmartH2O_DU/Alarm/Properties/Settings.settings
@@ -10,7 +10,7 @@
 &lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
   &lt;string&gt;PH&lt;/string&gt;
   &lt;string&gt;NH3&lt;/string&gt;
-  &lt;string&gt;Cl2&lt;/string&gt;
+  &lt;string&gt;CI2&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
   </Settings>
